[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rsa-encryption"
version = "2.0.2"
description = "Educational RSA encryption library"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "David H.", email = "shadowjumper3000@gmail.com" } ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
rsa-encrypt = "rsa_encryption.cli:main"
